--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,99 +4,88 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../estilo.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap"
       rel="stylesheet"
     />
     <title>SugarBowl Cocina| Panaderia</title>
   </head>
   <body>
     <!-- inicio encabezado -->
-    <header class="flex-container">
-      <img
-        src="../assets/img/logo.PNG"
-        class="logo"
-        alt="logo de sugar bowl cocina"
-      />
-      <nav>
-        <ul class="flex-container">
-          <li class="nav-item"><a href="../index.html">Inicio</a></li>
-          <li class="nav-item"><a href="panaderia.html">Panaderia</a></li>
-          <li class="nav-item"><a href="pasteleria.html">Pasteleria</a></li>
-          <li class="nav-item"><a href="about-us.html">Sobre Nosotros</a></li>
-          <li class="nav-item"><a href="#">Contacto</a></li>
-        </ul>
-      </nav>
-    </header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">SugarBowl</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a href="../index.html" class="nav-link">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a href="./panaderia.html" class="nav-link" 
+                >Pananderia</a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Pasteleria</a>
+            </li>
+            <li class="nav-item">
+              <a href="./about-us.html" class="nav-link">Sobre nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a href="./contacto.html" class="nav-link active" aria-current="page">Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <!-- fin encabezado -->
-    <hr />
     <!-- inicio contenido -->
     <main>
       <!-- titulo -->
-      <section class="title">
-        <h1>SugarBowl</h1>
+      <section class="container d-flex flex-column align-items-center">
+        <h1 class="title">SugarBowl</h1>
       </section>
       <!-- fin titulo -->
       <!-- inico contact form -->
-      <div class="container">
+      <main>
         <form action="#">
-          <div class="row">
-            <div class="col-25">
-              <label for="nombre">Nombre</label>
-            </div>
-            <div class="col-75">
-              <input
-                type="text"
-                id="Nombre"
-                name="firstname"
-                placeholder="Tu Nombre.."
-              />
-            </div>
+          <div class="m-3">
+            <label for="name" class="form-label">Nombre</label>
+            <input type="text" class="form-control" id="name" placeholder="name example">
           </div>
-          <div class="row">
-            <div class="col-25">
-              <label for="email">Email</label>
-            </div>
-            <div class="col-75">
-              <input
-                type="text"
-                id="email"
-                name="lastname"
-                placeholder="Tu Email.."
-              />
-            </div>
+          <div class="m-3">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="email" placeholder="name@example.com">
           </div>
-          <div class="row">
-            <div class="col-25">
-              <label for="subject">En que podemos ayudarte?</label>
-            </div>
-            <div class="col-75">
-              <textarea
-                id="subject"
-                name="subject"
-                style="height: 200px"
-              ></textarea>
-            </div>
+          <div class="m-3">
+            <label for="sugerencias" class="form-label">Sugerencias</label>
+            <textarea class="form-control" id="sugerencias"rows="3"></textarea>
           </div>
-          <div class="row">
-            <input type="submit" value="Enviar" />
+          <div class="m-3">
+            <button type="submit" class="btn btn-primary mb-3">Confirm identity</button>
           </div>
         </form>
-      </div>
+      </main>
       <!-- fin contact form -->
     </main>
     <!-- fin contenido -->
-    <hr />
     <!-- inico Footer -->
-    <footer class="flex-container footer">
-      <img
-        src="../assets/img/logo.PNG"
-        class="logo-footer"
-        alt="logo de sugar bowl cocina"
-      />
+    <footer class="d-flex flex-row justify-content-between bg-primary">
+      <img src="../assets/img/logo.PNG" class="logo-footer" alt="logo de sugar bowl cocina" />
       <ul>
         <li><h4>Social</h4></li>
         <li>Twitter</li>
@@ -109,5 +98,10 @@
       </ul>
     </footer>
     <!-- fin Footer -->
+    <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+    crossorigin="anonymous"
+  ></script>
   </body>
 </html>
