--- a/index.html
+++ b/index.html
@@ -75,19 +75,28 @@
     </main>
     <!-- fin contenido -->
     <!-- inico Footer -->
-    <footer class="d-flex flex-row justify-content-between bg-primary">
-      <img src="./assets/img/logo.PNG" class="logo-footer" alt="logo de sugar bowl cocina" />
-      <ul>
-        <li><h4>Social</h4></li>
-        <li>Twitter</li>
-        <li>Facebook</li>
-      </ul>
-      <ul>
-        <li><h4>Contacto</h4></li>
-        <li>Tel:</li>
-        <li>Mail:</li>
-      </ul>
-    </footer>
+    <footer class="container-fluid bg-primary">
+      <div class="row">
+        <div class="col-md-3 col-xs-0">
+          <img src="./assets/img/logo.PNG" class="logo-footer" alt="logo de sugar bowl cocina" />
+        </div>
+        <div class="col-md-3 col-xs-6">
+
+          <ul>
+            <li><h4>Social</h4></li>
+            <li>Twitter</li>
+            <li>Facebook</li>
+          </ul>
+        </div>
+        <div class="col-md-3 col-xs-6">
+          <ul>
+            <li><h4>Contacto</h4></li>
+            <li>Tel:</li>
+            <li>Mail:</li>
+          </ul>
+        </div>
+      </div>
+      </footer>
     <!-- fin Footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>  </body>
 </html>
