--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -106,22 +106,30 @@
     </main>
     <!-- fin contenido -->
     <!-- inico Footer -->
-    <footer class="d-flex flex-row justify-content-between bg-primary">
-      <img
-        src="../assets/img/logo.PNG"
-        class="logo-footer"
-        alt="logo de sugar bowl cocina"
-      />
-      <ul>
-        <li><h4>Social</h4></li>
-        <li>Twitter</li>
-        <li>Facebook</li>
-      </ul>
-      <ul>
-        <li><h4>Contacto</h4></li>
-        <li>Tel:</li>
-        <li>Mail:</li>
-      </ul>
+    <footer class="container-fluid bg-primary">
+      <div class="row">
+        <div class="col-md-4">
+          <img
+            src="./assets/img/logo.PNG"
+            class="logo-footer"
+            alt="logo de sugar bowl cocina"
+          />
+        </div>
+        <div class="col-md-4">
+          <ul>
+            <li><h4>Social</h4></li>
+            <li>Twitter</li>
+            <li>Facebook</li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <ul>
+            <li><h4>Contacto</h4></li>
+            <li>Tel:</li>
+            <li>Mail:</li>
+          </ul>
+        </div>
+      </div>
     </footer>
     <!-- fin Footer -->
     <script
