--- a/pages/panaderia.html
+++ b/pages/panaderia.html
@@ -43,9 +43,7 @@
               <a href="./pasteleria.html" class="nav-link">Pasteleria</a>
             </li>
             <li class="nav-item">
-              <a href="./about-us.html" class="nav-link"
-                >Sobre nosotros</a
-              >
+              <a href="./about-us.html" class="nav-link">Sobre nosotros</a>
             </li>
             <li class="nav-item">
               <a href="./contacto.html" class="nav-link">Contacto</a>
@@ -121,20 +119,36 @@
     </main>
     <!-- fin contenido -->
     <!-- inico Footer -->
-    <footer class="d-flex flex-row justify-content-between bg-primary">
-      <img src="../assets/img/logo.PNG" class="logo-footer" alt="logo de sugar bowl cocina" />
-      <ul>
-        <li><h4>Social</h4></li>
-        <li>Twitter</li>
-        <li>Facebook</li>
-      </ul>
-      <ul>
-        <li><h4>Contacto</h4></li>
-        <li>Tel:</li>
-        <li>Mail:</li>
-      </ul>
+    <footer class="container-fluid bg-primary">
+      <div class="row">
+        <div class="col-md-4">
+          <img
+            src="./assets/img/logo.PNG"
+            class="logo-footer"
+            alt="logo de sugar bowl cocina"
+          />
+        </div>
+        <div class="col-md-4">
+          <ul>
+            <li><h4>Social</h4></li>
+            <li>Twitter</li>
+            <li>Facebook</li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <ul>
+            <li><h4>Contacto</h4></li>
+            <li>Tel:</li>
+            <li>Mail:</li>
+          </ul>
+        </div>
+      </div>
     </footer>
     <!-- fin Footer -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
