--- a/pages/pasteleria.html
+++ b/pages/pasteleria.html
@@ -35,12 +35,12 @@
               <a href="../index.html" class="nav-link">Inicio</a>
             </li>
             <li class="nav-item">
-              <a href="./panaderia.html" class="nav-link"
-                >Pananderia</a
-              >
+              <a href="./panaderia.html" class="nav-link">Pananderia</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link active" aria-current="page">Pasteleria</a>
+              <a href="#" class="nav-link active" aria-current="page"
+                >Pasteleria</a
+              >
             </li>
             <li class="nav-item">
               <a href="./about-us.html" class="nav-link">Sobre nosotros</a>
@@ -123,18 +123,30 @@
     </main>
     <!-- fin contenido -->
     <!-- inico Footer -->
-    <footer class="d-flex flex-row justify-content-between bg-primary">
-      <img src="../assets/img/logo.PNG" class="logo-footer" alt="logo de sugar bowl cocina" />
-      <ul>
-        <li><h4>Social</h4></li>
-        <li>Twitter</li>
-        <li>Facebook</li>
-      </ul>
-      <ul>
-        <li><h4>Contacto</h4></li>
-        <li>Tel:</li>
-        <li>Mail:</li>
-      </ul>
+    <footer class="container-fluid bg-primary">
+      <div class="row">
+        <div class="col-md-4">
+          <img
+            src="./assets/img/logo.PNG"
+            class="logo-footer"
+            alt="logo de sugar bowl cocina"
+          />
+        </div>
+        <div class="col-md-4">
+          <ul>
+            <li><h4>Social</h4></li>
+            <li>Twitter</li>
+            <li>Facebook</li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <ul>
+            <li><h4>Contacto</h4></li>
+            <li>Tel:</li>
+            <li>Mail:</li>
+          </ul>
+        </div>
+      </div>
     </footer>
     <!-- fin Footer -->
     <script
