--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -35,9 +35,7 @@
               <a href="../index.html" class="nav-link">Inicio</a>
             </li>
             <li class="nav-item">
-              <a href="./panaderia.html" class="nav-link" 
-                >Pananderia</a
-              >
+              <a href="./panaderia.html" class="nav-link">Pananderia</a>
             </li>
             <li class="nav-item">
               <a href="#" class="nav-link">Pasteleria</a>
@@ -46,7 +44,12 @@
               <a href="./about-us.html" class="nav-link">Sobre nosotros</a>
             </li>
             <li class="nav-item">
-              <a href="./contacto.html" class="nav-link active" aria-current="page">Contacto</a>
+              <a
+                href="./contacto.html"
+                class="nav-link active"
+                aria-current="page"
+                >Contacto</a
+              >
             </li>
           </ul>
         </div>
@@ -65,18 +68,30 @@
         <form action="#">
           <div class="m-3">
             <label for="name" class="form-label">Nombre</label>
-            <input type="text" class="form-control" id="name" placeholder="name example">
+            <input
+              type="text"
+              class="form-control"
+              id="name"
+              placeholder="name example"
+            />
           </div>
           <div class="m-3">
             <label for="email" class="form-label">Email</label>
-            <input type="email" class="form-control" id="email" placeholder="name@example.com">
+            <input
+              type="email"
+              class="form-control"
+              id="email"
+              placeholder="name@example.com"
+            />
           </div>
           <div class="m-3">
             <label for="sugerencias" class="form-label">Sugerencias</label>
-            <textarea class="form-control" id="sugerencias"rows="3"></textarea>
+            <textarea class="form-control" id="sugerencias" rows="3"></textarea>
           </div>
           <div class="m-3">
-            <button type="submit" class="btn btn-primary mb-3">Confirm identity</button>
+            <button type="submit" class="btn btn-primary mb-3">
+              Confirm identity
+            </button>
           </div>
         </form>
       </main>
@@ -84,24 +99,36 @@
     </main>
     <!-- fin contenido -->
     <!-- inico Footer -->
-    <footer class="d-flex flex-row justify-content-between bg-primary">
-      <img src="../assets/img/logo.PNG" class="logo-footer" alt="logo de sugar bowl cocina" />
-      <ul>
-        <li><h4>Social</h4></li>
-        <li>Twitter</li>
-        <li>Facebook</li>
-      </ul>
-      <ul>
-        <li><h4>Contacto</h4></li>
-        <li>Tel:</li>
-        <li>Mail:</li>
-      </ul>
+    <footer class="container-fluid bg-primary">
+      <div class="row">
+        <div class="col-md-4">
+          <img
+            src="./assets/img/logo.PNG"
+            class="logo-footer"
+            alt="logo de sugar bowl cocina"
+          />
+        </div>
+        <div class="col-md-4">
+          <ul>
+            <li><h4>Social</h4></li>
+            <li>Twitter</li>
+            <li>Facebook</li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <ul>
+            <li><h4>Contacto</h4></li>
+            <li>Tel:</li>
+            <li>Mail:</li>
+          </ul>
+        </div>
+      </div>
     </footer>
     <!-- fin Footer -->
     <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-    crossorigin="anonymous"
-  ></script>
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
