--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -103,7 +103,7 @@
       <div class="row">
         <div class="col-md-4">
           <img
-            src="./assets/img/logo.PNG"
+            src="../assets/img/logo.PNG"
             class="logo-footer"
             alt="logo de sugar bowl cocina"
           />
